--- a/11.html
+++ b/11.html
@@ -48,7 +48,8 @@
         <pre><code>def count_lines():
     f = open('story.txt', 'r')
     count = 0
-    for line in f:
+    D = f.readlines()
+    for line in D:
         if line.startswith('A') or line.startswith('a'):
             count += 1
     f.close()
