--- a/12.html
+++ b/12.html
@@ -44,7 +44,7 @@
 <body>
     <div class="container">
         <h1>Program 1</h1>
-        <h4>Q:Write a program to create a binary file emp.dat with functions add student and search for a record using employee code.</h4>
+        <h4>Q:Write a program to create a binary file emp.dat with functions add employees and search for a record using employee code.</h4>
         <pre><code>
 import pickle
 def addemprecord():
