--- a/14.html
+++ b/14.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Program 12</title>
+    <title>Program 14</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -43,8 +43,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Program 1</h1>
-        <h4>Q:Write a program to create a binary file emp.dat with functions add student and search for a record using employee code.</h4>
+        <h1>Program 14</h1>
+        <h4>Q:Write a program to create a binary file stud.dat with functions add student and display all students who have marks above 40.</h4>
         <pre><code>
 import pickle
 def student_data():
