--- a/15.html
+++ b/15.html
@@ -1,1 +1,84 @@
-test
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Program 15</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            padding: 20px;
+            margin: 0;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        pre {
+            background-color: #eaeaea;
+            padding: 15px;
+            border-radius: 5px;
+            overflow-x: auto;
+        }
+        .back-link {
+            display: block;
+            margin-top: 20px;
+            text-align: center;
+            text-decoration: none;
+            color: #333;
+            font-weight: bold;
+            transition: color 0.3s ease;
+        }
+        .back-link:hover {
+            color: #000000;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Program 15</h1>
+        <h4>Q:</h1>
+        <pre><code>
+import csv
+def add_student():
+  with open('student.csv','a',newline='') as f:
+    roll_no = int(input("Enter Roll no:"))
+    name = input("Enter Name:")
+    mark = int(input("Enter Marks:")
+    K = [roll_no,name,mark]
+
+    W = csv.write(f)
+    W.writerow(K)
+
+
+def display():
+  with open('student.csv','r',newline='') as f:
+    R = csv.reader(f)
+    for data in R:
+      print(data)
+
+
+while True:
+  print("1.Add\n2.Display\n3.Exit\n")
+  ch=int(input("Enter Choice:"))
+  if ch==1:
+    add_student()
+  elif ch==2:
+    display()
+  elif ch==3:
+    break
+  else:
+    print("invalid choice")
+    
+</code></pre>
+        <a class="back-link" href="index.html">Back to Programs List</a>
+    </div>
+</body>
+</html>
