--- a/16.html
+++ b/16.html
@@ -67,12 +67,12 @@ def search():
 
 
 while True:
-  print("1.Add\n2.Display\n3.Exit\n")
+  print("1.Add\n2.Search\n3.Exit\n")
   ch=int(input("Enter Choice:"))
   if ch==1:
     add_student()
   elif ch==2:
-    display()
+    search()
   elif ch==3:
     break
   else:
