--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
         <a href="12.html">Program 12</a>
         <a href="13.html">Program 13</a>
         <a href="14.html">Program 14</a>
+        <a href="15.html">Program 14</a>
+        <a href="16.html">Program 14</a>
         <!-- Add more programs as needed -->
     </div>
 </body>
