--- a/15.html
+++ b/15.html
@@ -54,7 +54,7 @@ def add_student():
     mark = int(input("Enter Marks:")
     K = [roll_no,name,mark]
 
-    W = csv.write(f)
+    W = csv.writer(f)
     W.writerow(K)
 
 
